--- a/Views/Error/NotFound.cshtml
+++ b/Views/Error/NotFound.cshtml
@@ -1,52 +1,46 @@
-﻿
-@{
-    ViewBag.Title = "NotFound";
-}
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>File not found</title>
-    <style type="text/css">
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-            font-size: 14px;
-            line-height: 20px;
-            color: #444;
-        }
-
-        .page {
-            width: 740px;
-            margin: 100px auto;
-            text-align: center;
-        }
-
-        h1, h2, h3, h4, h5, h6 {
-            font-family: 'Arial', 'Segoe UI', Arial, helvetica, sans-serif;
-            font-weight: 400;
-        }
-
-        h1 {
-            font-size: 220px;
-            color: #999;
-        }
-
-        p {
-            font-size: 25px;
-            line-height: 36px;
-        }
-    </style>
+    <title>ErrorPage</title>
 </head>
 <body>
-    <div class="page">
+    <div class="wrapper">
+        <div class="container-fluid">
+            <div class="row justify-content-center my-5">
+                <div class="col-lg-6 col-xl-4 mb-4">
+                    <div class="error-text-box">
+                        <svg viewBox="0 0 600 200">
+                            <!-- Symbol-->
+                            <symbol id="s-text">
+                                <text text-anchor="middle" x="50%" y="50%" dy=".35em">404!</text>
+                            </symbol>
+                            <!-- Duplicate symbols-->
+                            <use class="text" xlink:href="#s-text"></use>
+                            <use class="text" xlink:href="#s-text"></use>
+                            <use class="text" xlink:href="#s-text"></use>
+                            <use class="text" xlink:href="#s-text"></use>
+                            <use class="text" xlink:href="#s-text"></use>
+                        </svg>
+                    </div>
+                    <div class="text-center">
+                        <h3 class="mt-0 mb-2">Упс! Страница не найдена </h3>
+                        <p class="text-muted mb-3">
+                            Похоже, вы свернули не туда. Не волнуйся...
+                            Это случается с лучшими из нас. Возможно, вы захотите проверить подключение к Интернету.
+                            Вот небольшой совет, который может помочь вам вернуться на правильный путь.
+                        </p>
+                        @Html.ActionLink("Вернуться на главную", "Index", "Home", new { area = "" }, new { @class = "btn btn-primary waves-effect waves-light" })
+                    </div>
+                    <!-- end row -->
 
-        <h1>
-            404
-        </h1>
-        <p>
-            Страница не найдена
-        </p>
+                </div> <!-- end col -->
+            </div>
+            <!-- end row -->
+
+
+        </div> <!-- end container -->
     </div>
+    <!-- end wrapper -->
 </body>
 </html>
 
