--- a/Views/Home/index.cshtml
+++ b/Views/Home/index.cshtml
@@ -15,6 +15,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6">
                     <div class="home-content text-center mb-4">
+                        Welcome, @HttpContext.Current.User.Identity.Name
                         <h1 class="home-title mb-4 text-white">Магазин N2</h1>
                         <p class="text-white-50 home-desc mb-4">Лучшее качество и низкие Цены.</p>
                         <div>
@@ -46,19 +47,24 @@
                     </div>
                 </div>
             </div>
-            <!-- end row -->
-            <div class="row">
-                @foreach (var product in Model.Products)
-                {
-                    <tr>
-                        <td>@product</td>
-                    </tr>
-                }
 
+            <div class="row">
+                @using (Html.BeginForm("Product", "Home", FormMethod.Post, new { autocomplete = "off" }))
+                {
+                    foreach (var product in Model.Products)
+                    {
+                        <div class="col-md-4">
+                            <div class="product-item">
+                                <p>@product</p>
+                                <div>
+                                    <button class="btn btn-primary btn-xs float-right" name="btn" type="submit" value="@product">View</button>
+                                </div>
+                            </div>
+                        </div>
+                    }
+                }
             </div>
-            <!-- end row -->
         </div>
-        <!-- end container-fluid -->
     </section>
 </body>
 </html>
