--- a/Views/Shared/_Header.cshtml
+++ b/Views/Shared/_Header.cshtml
@@ -56,7 +56,7 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav ml-auto navbar-center" id="mySidenav">
                     <li class="nav-item active">
-                        <a href="#home" class="nav-link">Домой</a>
+                        <a href="@Url.Action("Index", "Home")" class="nav-link">Домой</a>
                     </li>
                     <li class="nav-item">
                         <div class="dropdown">
@@ -75,7 +75,7 @@
                         <a href="#features" class="nav-link">Поиск</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#pricing" class="nav-link">Мой аккаунт</a>
+                        <a href="@Url.Action("Login", "Login")" class="nav-link">Мой аккаунт</a>
                     </li>
                     <li class="nav-item">
                         <a href="#testimonial" class="nav-link">Список избранного</a>
