--- a/Store2/Views/Categories/Create.cshtml
+++ b/Store2/Views/Categories/Create.cshtml
@@ -4,15 +4,21 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="@Url.Action("Index", "Home", new { area = "" })">Админ Панель</a></li>
+        <li class="breadcrumb-item"><a href="@Url.Action("Index", "Categories", new { area = "Admin" })">Категории</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Создание категорий</li>
+    </ol>
+</nav>
 
+<h2>Создание категории</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
-        <h4>Category</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -33,14 +39,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Создать" class="btn btn-success" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Вернуться к списку", "Index", null, new { @class = "btn btn-secondary" })
 </div>
 
 @section Scripts {
