--- a/Store2/Views/Shared/_Layout.cshtml
+++ b/Store2/Views/Shared/_Layout.cshtml
@@ -58,6 +58,16 @@
                         <img src="images/logo-dark.png" alt="" class="logo-dark" height="20" />
                     </a>
 
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="@Url.Action("Index", "Home")">Домой</a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="@Url.Action("Index", "Catalog")">Магазин</a>
+                        </li>
+                    </ul>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                         <i class="mdi mdi-menu"></i>
                     </button>
@@ -73,19 +83,47 @@
                             </div>
                         </form>
                         <ul class="navbar-nav ml-auto navbar-center" id="mySidenav">
-                            <li class="nav-item">
-                                <a href="#testimonial" class="nav-link">Мой аккаунт</a>
-                            </li>
+                            @if (User.Identity.IsAuthenticated)
+                            {
+                                <li class="nav-item">
+                                    <a href="@Url.Action("Index", "Manage")" class="nav-link">@User.Identity.Name</a>
+                                </li>
+                            }
+
+                            else
+                            {
+                                <li class="nav-item">
+                                    <a href="@Url.Action("Login", "Account")" class="nav-link">Войти</a>
+                                </li>
+                            }
+
                             <li class="nav-item">
                                 <a href="#faq" class="nav-link">Список избранного</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#faq" class="nav-link">Коризна</a>
+                                <a href="@Url.Action("Index", "ShoppingCarts")" class="nav-link">Корзина</a>
                             </li>
-                            <li class="nav-item">
-                                <a href="#faq" class="nav-link">Админ панель</a>
-                            </li>
+
+                            @if (User.IsInRole("Admin"))
+                            {
+                                <li class="nav-item">
+                                    <a href="@Url.Action("Index", "Admin")" class="nav-link">Админ панель</a>
+                                </li>
+                            }
+                            @if (User.Identity.IsAuthenticated)
+                            {
+                                using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" }))
+                                {
+                                    @Html.AntiForgeryToken()
+                                    <ul class="navbar-nav">
+                                        <li class="nav-item">
+                                            <a href="javascript:document.getElementById('logoutForm').submit()" class="nav-link">Выйти</a>
+                                        </li>
+                                    </ul>
+                                }
+                            }
                         </ul>
+
                     </div>
                 </div>
             </nav>
@@ -137,7 +175,6 @@
                                 </div>
                                 <div class="col-md-4">
                                     <div class="text-md-right">
-                                        <a href="#" class="btn btn-purple">Get started now <i class="mdi mdi-arrow-right"></i> </a>
                                     </div>
                                 </div>
                             </div>
